--- a/app/src/main/res/layout/activity_excursion_view.xml
+++ b/app/src/main/res/layout/activity_excursion_view.xml
@@ -1,42 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.pelicanus.insight.ExcursionViewActivity"
-    android:background="@drawable/background_login">
+    android:background="@android:color/background_light"
+    android:fitsSystemWindows="true"
+    >
 
-    <LinearLayout
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/main.appbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="300dp"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:fitsSystemWindows="true"
+        >
 
-        <ImageView
-            android:id="@+id/view_trip_image"
-            android:layout_width="400dp"
-            android:layout_height="228dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_margin="10dp"
-            android:paddingHorizontal="30dp"
-            android:src="@drawable/city_zaglushka_big" />
-
-        <TextView
-            android:id="@+id/view_excursion_name"
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/main.collapsing"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Excursion name"
-            android:textColor="@color/white"
-            android:gravity="center_horizontal"
-            android:textSize="20sp"/>
+            android:layout_height="match_parent"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            android:fitsSystemWindows="true"
+            app:contentScrim="?attr/colorPrimary"
+            app:expandedTitleMarginStart="48dp"
+            app:expandedTitleMarginEnd="64dp"
+            >
+
+            <ImageView
+                android:id="@+id/view_trip_image"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:fitsSystemWindows="true"
+                android:src="@drawable/excursion_zaglushka"
+                app:layout_collapseMode="parallax"
+                />
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/main.toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                app:layout_collapseMode="pin"
+                />
+        </android.support.design.widget.CollapsingToolbarLayout>
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        >
 
         <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_gravity="center_horizontal">
 
-            <de.hdodenhof.circleimageview.CircleImageView
+                <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/view_author_image"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -44,116 +73,241 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="15dp"/>
 
-            <TextView
+                <TextView
                 android:id="@+id/view_author_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:text="Author name"
-                android:layout_marginTop="10dp"
-                android:textColor="@color/white"/>
-
-        </LinearLayout>
-
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="20dp"
-            android:background="@color/white"
-            android:layout_marginTop="15dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="15dp"
-                    android:textColor="@android:color/black"
-                    android:text="@string/description"/>
-    
-                <TextView
-                    android:id="@+id/view_description"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="15dp"
-                    android:text="Here goes the description of our excursion. Maybe even the long one."/>
-                
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="15dp"
-                    android:textColor="@android:color/black"
-                    android:text="@string/date_and_time"/>
-
-                <TextView
-                    android:id="@+id/view_date_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="15dp"
-                    android:text="11.11.11 12:00"/>
-                
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="15dp"
-                    android:textColor="@android:color/black"
-                    android:text="@string/meeting_point"/>
-
-                <TextView
-                    android:id="@+id/view_adress"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="15dp"
-                    android:text="We meet there"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="15dp"
-                    android:textColor="@android:color/black"
-                    android:text="@string/language"/>
-
-                <TextView
-                    android:id="@+id/view_language"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="15dp"
-                    android:layout_marginBottom="15dp"
-                    android:text="Ukrainian"/>
+                android:layout_marginTop="10dp"/>
 
             </LinearLayout>
 
-        </android.support.v7.widget.CardView>
-
-        <TextView
-            android:id="@+id/view_status"
-            android:layout_width="wrap_content"
+            <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:textColor="@color/white"
-            android:layout_marginTop="15dp"
-            android:text="Waiting for a group"
-            />
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/view_participants"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:textColor="@color/white"
-            android:text="8 / 10 participants"
-            />
+                <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:textColor="@android:color/black"
+                android:text="@string/description"/>
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_margin="10dp"
-            android:text="I'm in"/>
-        
-    </LinearLayout>
+                <TextView
+                android:id="@+id/view_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="15dp"
+                android:text="Here goes the description of our excursion. Maybe even the long one."/>
 
-</ScrollView>
+                <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:textColor="@android:color/black"
+                android:text="@string/date_and_time"/>
+
+                <TextView
+                android:id="@+id/view_date_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="15dp"
+                android:text="11.11.11 12:00"/>
+
+                <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:textColor="@android:color/black"
+                android:text="@string/meeting_point"/>
+
+                <TextView
+                android:id="@+id/view_adress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="15dp"
+                android:text="We meet there"/>
+
+                <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:textColor="@android:color/black"
+                android:text="@string/language"/>
+
+                <TextView
+                android:id="@+id/view_language"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="15dp"
+                android:layout_marginBottom="15dp"
+                android:text="Ukrainian"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </android.support.v4.widget.NestedScrollView>
+
+</android.support.design.widget.CoordinatorLayout>
+
+<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+    <!--xmlns:tools="http://schemas.android.com/tools"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--tools:context="com.pelicanus.insight.ExcursionViewActivity"-->
+    <!--android:background="@drawable/background_login">-->
+
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:orientation="vertical">-->
+
+        <!--<ImageView-->
+            <!--android:id="@+id/view_trip_image"-->
+            <!--android:layout_width="400dp"-->
+            <!--android:layout_height="228dp"-->
+            <!--android:layout_gravity="center_horizontal"-->
+            <!--android:layout_margin="10dp"-->
+            <!--android:paddingHorizontal="30dp"-->
+            <!--android:src="@drawable/city_zaglushka_big" />-->
+
+        <!--<TextView-->
+            <!--android:id="@+id/view_excursion_name"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="Excursion name"-->
+            <!--android:textColor="@color/white"-->
+            <!--android:gravity="center_horizontal"-->
+            <!--android:textSize="20sp"/>-->
+
+        <!--<LinearLayout-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:orientation="vertical"-->
+            <!--android:layout_gravity="center_horizontal">-->
+
+            <!--<de.hdodenhof.circleimageview.CircleImageView-->
+                <!--android:id="@+id/view_author_image"-->
+                <!--android:layout_width="50dp"-->
+                <!--android:layout_height="50dp"-->
+                <!--android:src="@drawable/avatar_default"-->
+                <!--android:layout_gravity="center_horizontal"-->
+                <!--android:layout_marginTop="15dp"/>-->
+
+            <!--<TextView-->
+                <!--android:id="@+id/view_author_name"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_gravity="center_horizontal"-->
+                <!--android:text="Author name"-->
+                <!--android:layout_marginTop="10dp"-->
+                <!--android:textColor="@color/white"/>-->
+
+        <!--</LinearLayout>-->
+
+        <!--<android.support.v7.widget.CardView-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginHorizontal="20dp"-->
+            <!--android:background="@color/white"-->
+            <!--android:layout_marginTop="15dp">-->
+
+            <!--<LinearLayout-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:orientation="vertical">-->
+
+                <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_margin="15dp"-->
+                    <!--android:textColor="@android:color/black"-->
+                    <!--android:text="@string/description"/>-->
+    <!---->
+                <!--<TextView-->
+                    <!--android:id="@+id/view_description"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_marginHorizontal="15dp"-->
+                    <!--android:text="Here goes the description of our excursion. Maybe even the long one."/>-->
+                <!---->
+                <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_margin="15dp"-->
+                    <!--android:textColor="@android:color/black"-->
+                    <!--android:text="@string/date_and_time"/>-->
+
+                <!--<TextView-->
+                    <!--android:id="@+id/view_date_time"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_marginHorizontal="15dp"-->
+                    <!--android:text="11.11.11 12:00"/>-->
+                <!---->
+                <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_margin="15dp"-->
+                    <!--android:textColor="@android:color/black"-->
+                    <!--android:text="@string/meeting_point"/>-->
+
+                <!--<TextView-->
+                    <!--android:id="@+id/view_adress"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_marginHorizontal="15dp"-->
+                    <!--android:text="We meet there"/>-->
+
+                <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_margin="15dp"-->
+                    <!--android:textColor="@android:color/black"-->
+                    <!--android:text="@string/language"/>-->
+
+                <!--<TextView-->
+                    <!--android:id="@+id/view_language"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_marginHorizontal="15dp"-->
+                    <!--android:layout_marginBottom="15dp"-->
+                    <!--android:text="Ukrainian"/>-->
+
+            <!--</LinearLayout>-->
+
+        <!--</android.support.v7.widget.CardView>-->
+
+        <!--<TextView-->
+            <!--android:id="@+id/view_status"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="center_horizontal"-->
+            <!--android:textColor="@color/white"-->
+            <!--android:layout_marginTop="15dp"-->
+            <!--android:text="Waiting for a group"-->
+            <!--/>-->
+
+        <!--<TextView-->
+            <!--android:id="@+id/view_participants"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="center_horizontal"-->
+            <!--android:textColor="@color/white"-->
+            <!--android:text="8 / 10 participants"-->
+            <!--/>-->
+
+        <!--<Button-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="center_horizontal"-->
+            <!--android:layout_margin="10dp"-->
+            <!--android:text="I'm in"/>-->
+        <!---->
+    <!--</LinearLayout>-->
+
+<!--</ScrollView>-->
