--- a/app/src/main/res/layout/activity_excursion_view.xml
+++ b/app/src/main/res/layout/activity_excursion_view.xml
@@ -149,7 +149,7 @@
             />
 
         <Button
-            android:id="@+id/im_in"
+            android:id="@+id/im_in_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
